--- a/package.json
+++ b/package.json
@@ -6,24 +6,22 @@
     "@reduxjs/toolkit": "^1.9.0",
     "@stripe/react-stripe-js": "^1.15.0",
     "@stripe/stripe-js": "^1.44.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase": "^9.14.0",
     "framer-motion": "^7.6.6",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.6",
     "react-toastify": "^9.1.1",
-    "stripe": "^11.1.0",
-    "web-vitals": "^2.1.4"
+    "stripe": "^11.1.0"
   },
   "scripts": {
     "start:frontend": "react-scripts start",
