--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "project-05",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=14"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
     "@stripe/react-stripe-js": "^1.15.0",
