--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "dotenv-extended": "^2.9.0",
     "express": "^4.18.2",
     "firebase": "^9.14.0",
     "framer-motion": "^7.6.6",
